encrypt n uncomplete decrypt
