# api/keygen.go
@@ -1,7 +1,10 @@
 package api
 
 import (
+	"net/http"
+
 	service "github.com/allvisss/ECC_service/services/keygen"
+	ecies "github.com/ecies/go"
 	"github.com/gin-gonic/gin"
 )
 
@@ -13,6 +16,7 @@ func NewKeyGenerateHandler(r *gin.Engine) {
 	v1 := r.Group("/v1")
 	{
 		v1.GET("/keygen", handler.GetGeneratedKey)
+		v1.GET("/keygen2", handler.GetGeneratedKey2)
 	}
 }
 
@@ -27,4 +31,24 @@ func NewKeyGenerateHandler(r *gin.Engine) {
 func (data *KeyGenerateHandler) GetGeneratedKey(c *gin.Context) {
 	code, result := service.GenerateKey()
 	c.JSON(code, result)
+}
+
+//Key Generation 2
+// @Summary Generate key pair
+// @Tags Key
+// @Accept  */*
+// @Produce  json
+// @Router /v1/keygen2 [get]
+// @Success 201 {object} response.Response
+// @Failure 400,404,500 {object} response.ErrorResponse
+func (data *KeyGenerateHandler) GetGeneratedKey2(c *gin.Context) {
+	k, err := ecies.GenerateKey()
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+	}
+	err = service.WriteKeyToFile2(k)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, err)
+	}
+	c.JSON(http.StatusOK, k)
 }
